docs(users): specify 4XX response types in users controller's endpoints
