# spec/swagger/v1/swagger.yaml
@@ -33,6 +33,54 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/UsersRegisterResponse'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+        '403':
+          description: Forbidden
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '409':
+          description: Conflict
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   '/api/v1/users/{userId}':
     get:
       tags:
@@ -59,6 +107,30 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/UsersGetByIdResponse'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
     put:
       tags:
         - Users
@@ -95,6 +167,54 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/UsersUpdateResponse'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+        '403':
+          description: Forbidden
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
     delete:
       tags:
         - Users
@@ -110,6 +230,52 @@ paths:
       responses:
         '200':
           description: Success
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/UsersUpdateResponse'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UsersUpdateResponse'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/UsersUpdateResponse'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '403':
+          description: Forbidden
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/v1/users/resolve:
     get:
       tags:
@@ -134,8 +300,50 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/UsersGetByUsernameResponse'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
 components:
   schemas:
+    Problem:
+      type: object
+      properties:
+        error_description:
+          type: string
+      additionalProperties: false
     UsersGetByIdResponse:
       type: object
       properties:
@@ -232,6 +440,18 @@ components:
         avatar_url:
           type: string
           nullable: true
+      additionalProperties: false
+    ValidationProblem:
+      type: object
+      properties:
+        error_description:
+          type: string
+        validation_errors:
+          type: object
+          additionalProperties:
+            type: array
+            items:
+              type: string
       additionalProperties: false
   securitySchemes:
     OIDC:
