# src/CrowdParlay.Users.Api/v1/Controllers/UsersController.cs
@@ -1,3 +1,4 @@
+using System.Net;
 using CrowdParlay.Users.Api.Extensions;
 using CrowdParlay.Users.Api.v1.DTOs;
 using CrowdParlay.Users.Application.Exceptions;
@@ -17,6 +18,11 @@ public class UsersController : ApiControllerBase
     /// Creates a user.
     /// </summary>
     [HttpPost, Route("[action]")]
+    [ProducesResponseType(typeof(Register.Response), (int)HttpStatusCode.OK)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.InternalServerError)]
+    [ProducesResponseType(typeof(ValidationProblem), (int)HttpStatusCode.BadRequest)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.Forbidden)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.Conflict)]
     public async Task<Register.Response> Register([FromBody] UsersRegisterRequest request)
     {
         if (HttpContext.User.Identity?.IsAuthenticated == true)
@@ -29,6 +35,9 @@ public class UsersController : ApiControllerBase
     /// Returns user with the specified ID.
     /// </summary>
     [HttpGet, Route("{userId}")]
+    [ProducesResponseType(typeof(GetById.Response), (int)HttpStatusCode.OK)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.InternalServerError)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.NotFound)]
     public async Task<GetById.Response> GetById([FromRoute] Uuid userId) =>
         await Mediator.Send(new GetById.Query(userId));
 
@@ -36,6 +45,10 @@ public class UsersController : ApiControllerBase
     /// Returns user with the specified username.
     /// </summary>
     [HttpGet, Route("[action]")]
+    [ProducesResponseType(typeof(GetByUsername.Response), (int)HttpStatusCode.OK)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.InternalServerError)]
+    [ProducesResponseType(typeof(ValidationProblem), (int)HttpStatusCode.BadRequest)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.NotFound)]
     public async Task<GetByUsername.Response> Resolve([FromQuery] string username) =>
         await Mediator.Send(new GetByUsername.Query(username));
 
@@ -43,6 +56,11 @@ public class UsersController : ApiControllerBase
     /// Updates user with the specified ID.
     /// </summary>
     [HttpPut, Route("{userId}"), Authorize]
+    [ProducesResponseType(typeof(Update.Response), (int)HttpStatusCode.OK)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.InternalServerError)]
+    [ProducesResponseType(typeof(ValidationProblem), (int)HttpStatusCode.BadRequest)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.Forbidden)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.NotFound)]
     public async Task<Update.Response> Update([FromRoute] Uuid userId, [FromBody] UsersUpdateRequest request)
     {
         if (userId != User.GetUserId())
@@ -55,6 +73,10 @@ public class UsersController : ApiControllerBase
     /// Deletes user with the specified ID.
     /// </summary>
     [HttpDelete, Route("{userId}"), Authorize]
+    [ProducesResponseType(typeof(Update.Response), (int)HttpStatusCode.OK)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.InternalServerError)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.Forbidden)]
+    [ProducesResponseType(typeof(Problem), (int)HttpStatusCode.NotFound)]
     public async Task Delete([FromRoute] Uuid userId)
     {
         if (userId != User.GetUserId())
